Anpassungen Texte und Abhängigkeiten

--- a/src/main/java/de/delmak/fussballtipp/BasePage.html
+++ b/src/main/java/de/delmak/fussballtipp/BasePage.html
@@ -45,7 +45,7 @@
 					</ul>
 				</div>
 				<div class="box content">
-					<div class="contentheader">Flos Euro 2016 - Tipp</div>
+					<div class="contentheader">Flos Weltmeister-Tipp 2018</div>
 					<div class="contentbody">
 						<wicket:child/>
 					</div>
