--- a/src/main/java/de/delmak/fussballtipp/BasePage.html
+++ b/src/main/java/de/delmak/fussballtipp/BasePage.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="main">
 				<div class="box navbar">
-					<img src="logo.png"/>
+                                    <img src="logo.png" style="width: 230px"/>
 					<ul class="menu">
 						<wicket:enclosure child="lnkHome"><li><a href="#" wicket:id="lnkHome">Home</a></li></wicket:enclosure>
 						<wicket:enclosure child="lnkRanking"><li><a href="#" wicket:id="lnkRanking">Rangliste</a></li></wicket:enclosure>
