Bezahlstatus-Verwaltung, Rechtschreibkorrekturen und der Random-Button

--- a/src/main/java/de/delmak/fussballtipp/BasePage.html
+++ b/src/main/java/de/delmak/fussballtipp/BasePage.html
@@ -28,6 +28,7 @@
 						</wicket:enclosure>
 						<wicket:enclosure child="lnkUserSettings"><li><a href="#" wicket:id="lnkUserSettings">Einstellungen</a></li></wicket:enclosure>
 						<wicket:enclosure child="lnkRules"><li><a href="#" wicket:id="lnkRules">Spielregeln</a></li></wicket:enclosure>
+						<wicket:enclosure child="lnkUserEntryFeeAdministration"><li><a href="#" wicket:id="lnkUserEntryFeeAdministration">Bezahlstatus</a></li></wicket:enclosure>
 						<wicket:enclosure child="lnkUserAdministration">
 						<li>
 							<a href="#">Administration</a>
