--- a/src/main/java/de/delmak/fussballtipp/HomePage.html
+++ b/src/main/java/de/delmak/fussballtipp/HomePage.html
@@ -8,19 +8,29 @@
 		<wicket:extend>
 			<h1>Herzlich Willkommen bei meinem Tippspiel!</h1>
 			<div wicket:id="pnlSignedInHome">
-				<h2>Getting Startet</h2>
-				<p>Als kleine Starthilfe hier die ersten Schritte auf der Tippseite:</p>
+				<h2>Getting Started</h2>
+				<p>Als kleine Starthilfe hier die ersten Schritte auf der Tippseite</p>
+                                <h3>Tippabgabe</h3>
 				<p>
 					Über "Tipps" und "Alle Spiele" bekommst du eine Übersicht aller Spiele. Hinter jedem Spiel kannst du über den Stern deinen Tipp für das 
 					Ergebnis abgeben. Zusätzlich sind die Spiele hier auch je nach Turnierphase einzusehen. Über "Sondertipps" bekommst du eine Übersicht 
 					aller Sondertipps. Die Tippabgabe funktioniert hier gleich.
+				</p>		
+                                <h3>Der Zufallstipp</h3>
+				<p>
+					Auf den Seiten für die Tippabgabe je Spiel gibt es oben rechts jeweils einen kleinen Knopf, der Aussieht wie ein Taschenrechner.Über diesen
+                                        Knopf kann man alle aktuell angezeigten Spiele, die noch nicht getippt wurden, zufällig tippen. Diese Funktion kann verhindern, dann man
+                                        vergisst, ein Spiel rechtzeitig zu tippen. Für Sondertipps gibt es diese Funktion nicht.
 				</p>			
+                                <h3>Die Laberbox</h3>
 				<p>
 					Nachdem du jetzt aller Tipps abgegeben hast, kannst du in die "Laberbox" und dich mit deinen Mitspieler unterhalten. Wenn die Spiele nicht
 					mehr getippt werden können, verändert sich der Stern in eine Lupe und ermöglicht es, die abgegebenen Tipps aller Mitspieler einzusehen.
 				</p>			
+                                <h3>Feedback</h3>
 				<p>Bei Fragen, Anregungen oder wenn du einen Fehler findest, schick mir einfach eine <a class="textlink" href="mailto:fxeller@delmak.de">Mail</a>.</p>
 			</div>
+                        <h3>Spielregeln</h3>
 			<p>Die Spielregeln findest du hier: <a class="textlink" href="#" wicket:id="lnkRulesHome">Spielregeln</a>.</p>
 			<p>Ich wünsche allen viel Spaß beim Tippen!</p>
 		</wicket:extend>
