--- a/src/main/java/de/delmak/fussballtipp/UserAdministration.html
+++ b/src/main/java/de/delmak/fussballtipp/UserAdministration.html
@@ -14,6 +14,7 @@
 						<th>Nachname</th>
 						<th>Vorname</th>
 						<th>EMail</th>
+						<th>Einsatz bezahlt</th>
 						<th>Rollen</th>
 						<th>Tippgruppen</th>
 						<th><a href="#" wicket:id="lnkInsertData"><img src="insert.png"/></a></th>
@@ -23,6 +24,7 @@
 						<td wicket:id="fldLastname">[User.lastname]</td>
 						<td wicket:id="fldFirstname">[User.firstname]</td>
 						<td wicket:id="fldEmail">[User.email]</td>
+						<td wicket:id="fldHaspaidentryfeetext">[User.haspaidentryfeetext]</td>
 						<td wicket:id="fldRoles">[User.Roles]</td>
 						<td wicket:id="fldBetgroups">[User.Betgroups]</td>
 						<td>
@@ -52,6 +54,10 @@
 					<div>
 						<label for="txtEmail">EMail: </label>
 						<input type="text" wicket:id="txtEmail"/>
+					</div>
+					<div>
+						<label for="chkHaspaidentryfee">Einsatz bezahlt: </label>
+						<input type="checkbox" wicket:id="chkHaspaidentryfee"/>
 					</div>
 					<hr>
 					<div>
