Changes for EM-2021

--- a/src/main/java/de/delmak/fussballtipp/BasePage.html
+++ b/src/main/java/de/delmak/fussballtipp/BasePage.html
@@ -10,7 +10,7 @@
 			</div>
 			<div class="main">
 				<div class="box navbar">
-                                    <img src="logo.png" style="width: 230px"/>
+                                    <img src="logo_europe.png" style="width: 230px"/>
 					<ul class="menu">
 						<wicket:enclosure child="lnkHome"><li><a href="#" wicket:id="lnkHome">Home</a></li></wicket:enclosure>
 						<wicket:enclosure child="lnkRanking"><li><a href="#" wicket:id="lnkRanking">Rangliste</a></li></wicket:enclosure>
@@ -46,7 +46,7 @@
 					</ul>
 				</div>
 				<div class="box content">
-					<div class="contentheader">Flos Weltmeister-Tipp 2018</div>
+					<div class="contentheader">Flos Europameister-Tipp 2021</div>
 					<div class="contentbody">
 						<wicket:child/>
 					</div>
