--- a/src/main/java/de/delmak/fussballtipp/Rules.html
+++ b/src/main/java/de/delmak/fussballtipp/Rules.html
@@ -15,12 +15,12 @@
 			<li>Wer die Tendenz richtig hat, kriegt nochmals jeweils einen Punkt, wenn er die Tore der Heim- oder Gastmannschaft richtig hat.</li>
 			<li>Das Maximum an Punkten pro Spiel beläuft sich daher auf 3 Punkte.</li>
 			<li>Als Endergebnis zählt der Spielstand inklusive Tore aus einem eventuellen Elfmeterschießen.</li>
-			<h2>Tipps auf Gruppensieger und Weltmeister</h2>
+			<h2>Tipps auf Gruppensieger und Europameister</h2>
 			<li>Die Gruppensiegertipps sind über den Menüpunkt 'Tipps' und dann über 'Sondertipps' erreichbar.</li>
 			<li>Tipps für einen Gruppensieger können bis 30 Minuten vor dem ersten Spiel der jeweiligen Gruppe abgegeben oder geändert werden.</li>
-			<li>Der Weltmeistertipp kann bis 30 Minuten vor Spielbeginn des ersten Achtelfinales abgegeben oder geändert werden.</li>
-			<li>Punkte für Gruppensieger und Weltmeister gibt es, wenn die jeweiligen Sieger eingetragen wurden.</li>
-			<li>Für einen richtigen Gruppensieger gibt es 3 Punkte, für den richtigen Weltmeister 5.</li>
+			<li>Der Europameistertipp kann bis 30 Minuten vor Spielbeginn des ersten Achtelfinales abgegeben oder geändert werden.</li>
+			<li>Punkte für Gruppensieger und Europameister gibt es, wenn die jeweiligen Sieger eingetragen wurden.</li>
+			<li>Für einen richtigen Gruppensieger gibt es 3 Punkte, für den richtigen Europameister 5.</li>
 		</wicket:extend>
 	</body>
 </html>
