--- a/src/main/java/de/delmak/fussballtipp/BetView.html
+++ b/src/main/java/de/delmak/fussballtipp/BetView.html
@@ -51,11 +51,11 @@
 				<br>
 				<table>
 					<thead>
-						<th colspan="3">Weltmeister</th>
+						<th colspan="3">Europameister</th>
 					</thead>
 					<tr>
-						<td style="width: 200px">Weltmeister</td>
-						<td style="width: 150px" wicket:id="lblChampionBet">[Weltmeister]</td>
+						<td style="width: 200px">Europameister</td>
+						<td style="width: 150px" wicket:id="lblChampionBet">[Europameister]</td>
 						<td>
 							<a href="#" wicket:id="lnkChampionPlaceBet"><img src="placebet.png" title="Tipp abgeben"/></a>
 							<a href="#" wicket:id="lnkChampionShowBet"><img src="showbet.png" title="Tipps ansehen"/></a>
